--- a/tattoo-site/public/css/site.css
+++ b/tattoo-site/public/css/site.css
@@ -6,8 +6,21 @@ body{
 }
 
 .bg-dark {
-    /*background: rgba(255, 218, 115, 0.9) !important;*/
-    background: rgba(150, 165, 171, 0.9) !important;
+    /*background: rgba(150, 165, 171, 0.9) !important;*/
+    background: rgba(255, 193, 7, 0.9) !important;
+}
+
+.bg-card-orcamento{
+    background: rgba(255, 193, 7, 1)
+}
+
+.bg-card-orcamento-interno{
+    /*background-color: rgba(255, 240, 143, 0.7)*/
+    background-color: #424B54;
+}
+
+.bg-card-orcamento-interno input{
+    color: white;
 }
 
 .card-orcamento{
