--- a/tattoo-site/public/css/site.css
+++ b/tattoo-site/public/css/site.css
@@ -12,7 +12,7 @@ body{
 }
 
 .bg-card-orcamento{
-    background: rgba(255, 193, 7, 1)
+    background: rgba(255, 193, 7, 1);
 }
 
 .bg-card-orcamento-interno{
